revisions to paper; this completes first draft

--- a/doc/paper/content/abstract.tex
+++ b/doc/paper/content/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
-The entropy viscosity method introduced by Guermond\cite{guermond_ev},
-in conjunction with the Flux-Corrected Transport algorithm, is
+The entropy viscosity method introduced by Guermond \cite{guermond_ev},
+in conjunction with the Flux-Corrected Transport (FCT) algorithm, is
 applied to the transport equation using the continuous finite element
 method. The resulting scheme is second-order accurate in space,
 enforces an entropy inequality, mitigates the formation of spurious
@@ -8,7 +8,7 @@ oscillations, and guarantees the absence of negativities.
 Time discretizations considered include steady-state, Theta methods
 such as explicit and implicit Euler, and strong-stability preserving
 Runge-Kutta (SSPRK) methods.
-The analyzed scheme is shown to be robust with explicit time discretizations
+The developed scheme is shown to be robust with explicit time discretizations
 but encounters significant nonlinear convergence difficulties for steady-state
 and implicit time discretizations.
 \end{abstract}
