--- a/doc/paper/content/limiting_coefficients.tex
+++ b/doc/paper/content/limiting_coefficients.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../paper.tex
 
-\subsubsection{Limiting Coefficients}
+\subsubsection{Limiting Coefficients}\label{sec:limiter}
 
 The results in this paper use the classic multi-dimensional limiter introduced by Zalesak
 \cite{zalesak}. Recall that a limiter takes as input only the antidiffusion bounds
