--- a/doc/paper/content/methodology.tex
+++ b/doc/paper/content/methodology.tex
@@ -1,4 +1,4 @@
 Recall that the FCT algorithm is built from a low-order scheme and a high-order
 scheme. Section \ref{sec:low} describes the low-order scheme, and Section
-\ref{sec:high} describes the high-order scheme. Then Section \ref{sec:fct}
+\ref{sec:high} describes the high-order scheme. Section \ref{sec:fct}
 describes the FCT scheme combined from these components.
