--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -3,6 +3,9 @@
 \usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage{subcaption}
+\usepackage{tikz}     % for tikz pictures
+\usetikzlibrary{calc} % for computing points in tikz pictures
+\usetikzlibrary{shapes.geometric}
 
 \input{shortcuts}
 
