--- a/doc/paper/references.bib
+++ b/doc/paper/references.bib
@@ -232,7 +232,7 @@
 
 @Article{lohner,
   Title                    = {Finite Element Flux-Corrected Transport (FEM-FCT) for the Euler and Navier-Stokes Equations},
-  Author                   = {R. L\:{o}hner and K. Morgan and J. Peraire and M. Vahdati},
+  Author                   = {R. L\"{o}hner and K. Morgan and J. Peraire and M. Vahdati},
   Journal                  = {International Journal for Numerical Methods in Fluids},
   Year                     = {1987},
   Pages                    = {1093--1109},
@@ -500,4 +500,3 @@
   Adsurl                   = {http://adsabs.harvard.edu/abs/2013CMAME.253..479Z},
   Doi                      = {10.1016/j.cma.2012.08.018}
 }
-
